# BitmapCompress

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/handsome/bitmapcompress/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/handsome/bitmapcompress/: CompressUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/handsome/bitmapcompress/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
